--- a/1-screening.tex
+++ b/1-screening.tex
@@ -267,12 +267,12 @@ The industrial interest for noble gases lies first in the many applications atta
   \hline
   Industrial application  &  Xe/Kr composition  \\
   \hline
-  Extraction from ambient air\autocite{kerry2007industrial} &  20/80  \\[0.5mm]
+  Extraction from ambient air\autocite{kerry2007industrial} &  100~\si{\ppm}/400~\si{\ppm}  \\[0.5mm]
   Spent nuclear fuel\autocite{auerbach2003handbook} &  90/10  \\[0.5mm]
   Molten salt reactor\autocite{Riley_2019} &  unknown \\[0.5mm]
   \hline
 \end{tabular}
-\caption{Composition of the Xe/Kr mixture in different applications.}
+\caption{Composition of the Xe/Kr mixture in different applications. \todo{Search composition, correspondence in simulation to 20/80 etc.}}
 \label{tab:indus_app}
 \end{table}
 
