--- a/2-thermo.tex
+++ b/2-thermo.tex
@@ -14,12 +14,12 @@ Before going into the details of the adsorption properties themselves, we will f
 
 \subsubsection{Pore size}
 
-There are a multitude of pore sizes depending on the point where we measure it, all these pore sizes  compose what we call a pore size distribution. Some specific values are, however, uniquely defined and used to put a single value to characterize pore sized. The diameter of the largest sphere that can diffuse freely in the structure is called $D_f$. The diameter $D_{if}$ corresponds to the diameter of the largest included sphere along a free diffusion path; the diameter of the largest included sphere (not necessarily in a free diffusion path) is denoted $D_i$. The Figure~\ref{fgr:pore_size} illustrates the difference between these pore sizes. In thermodynamic studies we will often use the term ``largest cavity diameter'' (LCD) instead of the largest included sphere $D_i$. And, the term ``pore limiting diameter'' will be used instead of $D_i$ especially when studying the transport effects with the nanopores.
+There are a multitude of pore sizes depending on the point where we measure it, all these pore sizes  compose what we call a pore size distribution. Some specific values are, however, uniquely defined and used to put a single value to characterize pore sized. The diameter of the largest sphere that can diffuse freely in the structure is called D$_f$. The diameter D$_{if}$ corresponds to the diameter of the largest included sphere along a free diffusion path; the diameter of the largest included sphere (not necessarily in a free diffusion path) is denoted D$_i$. The Figure~\ref{fgr:pore_size} illustrates the difference between these pore sizes. In thermodynamic studies we will often use the term ``largest cavity diameter'' (LCD) instead of the largest included sphere D$_i$. And, the term ``pore limiting diameter'' will be used instead of D$_i$ especially when studying the transport effects with the nanopores.
 
 \begin{figure}[ht]
   \centering
   \includegraphics[width=0.7\textwidth]{figures/2-thermo/pores.pdf}
-  \caption{Illustration of the different pore sizes $D_f$, $D_i$ and $D_{if}$. Note that in some materials $D_{if}$ is equal to $D_i$, when the largest included sphere is also accessible through a free diffusion path. }\label{fgr:pore_size}
+  \caption{Illustration of the different pore sizes D$_f$, D$_i$ and D$_{if}$. Note that in some materials D$_{if}$ is equal to D$_i$, when the largest included sphere is also accessible through a free diffusion path. }\label{fgr:pore_size}
 \end{figure}
 
 To define these pore sizes, we need to first set the radii of the framework atoms that will shape the surrounding pores. These radii can be defined using different methods, the default mode uses the Cambridge Crystallographic Data Centre's (CCDC) radii. This method is most commonly used in the literature. We also introduced another set of radii based on the universal forcefield~\autocite{rappe1992} we use for molecular simulations. The determination of these radii are inspired by an approach developed by Hung et al.\autocite{Hung_2021} The atomic radii are defined as the distance where the LJ potential reaches $3 k_\text{B} T/2$, for $T = \SI{298}{\kelvin}$. This type of definition can be more easily compared to the molecular simulations. For instance, we will use indexes to tell apart both methods. For example, LCD\e{CCDC} corresponds to the standard definition of the LCD that uses the CCDC radii to run the Zeo++ software, while the LCD\e{UFF} is associated with the definition of the atomic radii dependent on the UFF forcefield. In this chapter, I will mainly use the forcefield-based definition --- the largest cavity diameter will be noted LCD\e{UFF} and the studies on void fraction and surface areas are also defined using this set of radii.
@@ -262,7 +262,7 @@ As we have seen above in the existing literature, the computational screening of
 
 \subsection{Structure--selectivity relationships}\label{sct:geometry}
 
-An adsorption separation process is primarily characterized by a pivotal performance metric called the selectivity we defined in equations~\ref{eq:selec} and~\ref{eq:selec_0}. By comparing this selectivity to geometrical descriptors calculated by the Zeo++ software,\autocite{Zeo++} we want to characterize the materials that will most likely be selective for a separation of a 20:80 Xe/Kr mixture (to compare with most literature screenings on a mixture extracted from the air). Three structural descriptors have been calculated: the accessible surface area of a \ce{N2}-sized probe of \SI{1.2}{\angstrom}, the void fraction occupiable by a \SI{2.0}{\angstrom} radius probe (roughly the size of a xenon),\autocite{vol_Ongari2017} and the diameter of the largest included sphere ($D_i$) using specially designed atom radii. Inspired by a recent work on the comparison of pore limiting diameters and self-diffusion coefficients,\autocite{Hung_2021} we defined a list of van der Waals radii to be read by the Zeo++ software (more details in \url{https://github.com/eren125/zeopp_radtable}). All Zeo++ calculations use an atomic radius that corresponds to the distance where the LJ potential reaches $3 k\e{B} T/2$, for $T = \SI{298}{\kelvin}$.
+An adsorption separation process is primarily characterized by a pivotal performance metric called the selectivity we defined in equations~\ref{eq:selec} and~\ref{eq:selec_0}. By comparing this selectivity to geometrical descriptors calculated by the Zeo++ software,\autocite{Zeo++} we want to characterize the materials that will most likely be selective for a separation of a 20:80 Xe/Kr mixture (to compare with most literature screenings on a mixture extracted from the air). Three structural descriptors have been calculated: the accessible surface area of a \ce{N2}-sized probe of \SI{1.2}{\angstrom}, the void fraction occupiable by a \SI{2.0}{\angstrom} radius probe (roughly the size of a xenon),\autocite{vol_Ongari2017} and the diameter of the largest included sphere (D$_i$) using specially designed atom radii. Inspired by a recent work on the comparison of pore limiting diameters and self-diffusion coefficients,\autocite{Hung_2021} we defined a list of van der Waals radii to be read by the Zeo++ software (more details in \url{https://github.com/eren125/zeopp_radtable}). All Zeo++ calculations use an atomic radius that corresponds to the distance where the LJ potential reaches $3 k\e{B} T/2$, for $T = \SI{298}{\kelvin}$.
 
 \subsubsection{Xenon uptake and selectivity}
 
@@ -312,16 +312,16 @@ By carrying out a similar analysis than for the surface areas bu for the void fr
 
 \subsubsection{Pore Size and selectivity}
 
-The ideal pore size for the xenon krypton separation can be deduced from the Figure~\ref{fgr:lcd}. On the right plot we can see that the most selective materials have a pore size near \SI{5}{\angstrom}. However, it is hard to distinguish between the ver low selectivity materials that have a similar label color. To see the difference, we plotted with different colors the structures with $D_i$ between $3.6$ and $11.6$~\si{\angstrom}. And we can see clearly that the pore size needs to be around \SI{5}{\angstrom} but if it is too low (near \SI{4.5}{\angstrom}), the selectivity drops significantly. Hence, there is a sweet spot of pore size values that enable very high selectivity.
+The ideal pore size for the xenon krypton separation can be deduced from the Figure~\ref{fgr:lcd}. On the right plot we can see that the most selective materials have a pore size near \SI{5}{\angstrom}. However, it is hard to distinguish between the ver low selectivity materials that have a similar label color. To see the difference, we plotted with different colors the structures with D$_i$ between $3.6$ and $11.6$~\si{\angstrom}. And we can see clearly that the pore size needs to be around \SI{5}{\angstrom} but if it is too low (near \SI{4.5}{\angstrom}), the selectivity drops significantly. Hence, there is a sweet spot of pore size values that enable very high selectivity.
 
 \begin{figure}[h!]
   \centering
   \includegraphics[width=0.48\textwidth]{figures/2-thermo/Scatterplot_uptake_selectivity_lcd.pdf}
   \includegraphics[width=0.48\textwidth]{figures/2-thermo/Scatterplot_uptake_selectivity_lcd_zoom.pdf}
-  \caption{Scatterplot of the xenon uptake as a function of the selectivity (20:80) and labeled by the values of LCD\e{UFF} (left). The same scatterplot restricted to values of $D_i$ between ($3.6$ and $11.6$~\si{\angstrom}) and labeled using a different color code to distinguish the most selective materials from the least selective ones. The most selective materials are colored in orange corresponding to a pore size adapted for xenon adsorption (around $5$~\si{\angstrom}). The least selective ones are in green, with a pore lower than the size of a xenon hence preventing its adsorption.}\label{fgr:lcd}
+  \caption{Scatterplot of the xenon uptake as a function of the selectivity (20:80) and labeled by the values of LCD\e{UFF} (left). The same scatterplot restricted to values of D$_i$ between ($3.6$ and $11.6$~\si{\angstrom}) and labeled using a different color code to distinguish the most selective materials from the least selective ones. The most selective materials are colored in orange corresponding to a pore size adapted for xenon adsorption (around $5$~\si{\angstrom}). The least selective ones are in green, with a pore lower than the size of a xenon hence preventing its adsorption.}\label{fgr:lcd}
 \end{figure}
 
-If we now look at the joint effects of the void fraction and the largest cavity diameter ($D_i$) on the selectivity, we can note that the most selective materials are located in a very particular domain of this bidimensional descriptor space. On Figure~\ref{fgr:lcd_vf}, the structures with a selectivity over $10$ are very likely to have a void fraction under $0.4$ with a rather wide range of $D_i$. However, as we can see on the filtered version of the plot (on the right), the most selective materials (over $40$) exist, on the other hand, in a very narrow range of $D_i$ values between $4.8$ and $6$~\si{\angstrom} approximately. This can be explained by the size of a xenon atom being very close to these $D_i$ values, which allows a maximal stabilization of the xenon that we want to separate from krypton. The krypton being slightly smaller, the interaction with the pores are less favorable, hence explaining the higher selectivity we observe. 
+If we now look at the joint effects of the void fraction and the largest cavity diameter (D$_i$) on the selectivity, we can note that the most selective materials are located in a very particular domain of this bidimensional descriptor space. On Figure~\ref{fgr:lcd_vf}, the structures with a selectivity over $10$ are very likely to have a void fraction under $0.4$ with a rather wide range of D$_i$. However, as we can see on the filtered version of the plot (on the right), the most selective materials (over $40$) exist, on the other hand, in a very narrow range of D$_i$ values between $4.8$ and $6$~\si{\angstrom} approximately. This can be explained by the size of a xenon atom being very close to these D$_i$ values, which allows a maximal stabilization of the xenon that we want to separate from krypton. The krypton being slightly smaller, the interaction with the pores are less favorable, hence explaining the higher selectivity we observe. 
 
 \begin{figure}[h!]
   \centering
@@ -533,11 +533,11 @@ Furthermore, the scatterplot of $k\e{H}$ and $k\e{S}$ (shown in Figure~\ref{fgr:
 
 \begin{table}[hb]
   \small
-    \caption{Enthalpic ($k\e{H}$) and entropic ($k\e{S}$) contributions to the selectivity change ($s\e{1}/s\e{0}$) between low and ambient pressures for some archetypal structures selected for their high $s\e{0}$ selectivity at infinite dilution. Every structure is identified using a CSD Refcode and a reference the first article that mentions it. The pore size is also characterized using the diameters $D_i$ and $D_f$ in \si{\angstrom}.}\label{tbl:effect}
+    \caption{Enthalpic ($k\e{H}$) and entropic ($k\e{S}$) contributions to the selectivity change ($s\e{1}/s\e{0}$) between low and ambient pressures for some archetypal structures selected for their high $s\e{0}$ selectivity at infinite dilution. Every structure is identified using a CSD Refcode and a reference the first article that mentions it. The pore size is also characterized using the diameters D$_i$ and D$_f$ in \si{\angstrom}.}\label{tbl:effect}
     \renewcommand{\arraystretch}{1.1}
     \begin{tabular*}{0.8\textwidth}{@{\extracolsep{\fill}}|lr|rrrrr|rr|}
       \hline
-        CSD Refcode & Ref. & $s\e{0}$ &  $s\e{1}$  &  $s\e{1}/s\e{0}$ &  $k\e{H}$ &  $k\e{S}$ & $D_i$ & $D_f$ \\
+        CSD Refcode & Ref. & $s\e{0}$ &  $s\e{1}$  &  $s\e{1}/s\e{0}$ &  $k\e{H}$ &  $k\e{S}$ & D$_i$ & D$_f$ \\
       \hline
       VOKJIQ &~\cite{VOKJIQ} &           $157.17$ &  $242.73$ &  $1.54$ &  $1.46$ &  $1.06$  &  $5.2$  &  $3.2$  \\
       KAXQIL &~\cite{KAXQIL} &           $103.78$ &  $132.57$ &  $1.28$ &  $1.32$ &  $0.96$  &  $5.2$  &  $4.1$  \\
@@ -633,7 +633,7 @@ Since krypton is smaller and less strongly tied on its adsorption site than xeno
 The remaining materials discussed here form a third category, with a strong decrease in selectivity from low to ambient pressure. We look at several phenomena that can be at the root of this decrease, which is important for screening studies as it can limit the working performance of a material that appears to be a ``top performer'' based on zero-pressure screening.
 
 
-For example, GOMRAC has a similar structure compared to GOMREG (see Figure~\ref{fgr:SI:examples:GOMRAC}), except for the fact that the pores and channels are smaller (see the values of the $D_i$, and the $D_f$, in Table~\ref{tbl:effect}). The distances between the adsorbed molecules --- in their ideal sites --- are then consequently smaller. At such distances, we can assume that the interactions between adsorbates become more stabilizing for krypton than for xenon molecules in GOMRAC (see LJ potentials at distance lower than \SI{4.2}{\angstrom} in the Figure~\ref{fgr:LJ}), which translates into an enthalpic contribution $k\e{H}$ of $0.58$. Moreover, this is compatible with the equivalent guest--guest interactions in GOMREG, as previously discussed. It explains why the difference between the adsorption enthalpies becomes smaller for GOMRAC, whereas it stays the same for GOMREG (between low and ambient pressure). This further validates the crucial role of the interactions between adsorbed molecules, and their relationship with the guest-guest distances when considering a high loading condition.
+For example, GOMRAC has a similar structure compared to GOMREG (see Figure~\ref{fgr:SI:examples:GOMRAC}), except for the fact that the pores and channels are smaller (see the values of the D$_i$, and the D$_f$, in Table~\ref{tbl:effect}). The distances between the adsorbed molecules --- in their ideal sites --- are then consequently smaller. At such distances, we can assume that the interactions between adsorbates become more stabilizing for krypton than for xenon molecules in GOMRAC (see LJ potentials at distance lower than \SI{4.2}{\angstrom} in the Figure~\ref{fgr:LJ}), which translates into an enthalpic contribution $k\e{H}$ of $0.58$. Moreover, this is compatible with the equivalent guest--guest interactions in GOMREG, as previously discussed. It explains why the difference between the adsorption enthalpies becomes smaller for GOMRAC, whereas it stays the same for GOMREG (between low and ambient pressure). This further validates the crucial role of the interactions between adsorbed molecules, and their relationship with the guest-guest distances when considering a high loading condition.
 
 \begin{figure*}[h]
   \centering
