--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -28,7 +28,7 @@ Since the pollen motion observations of the botannist Brown in 1826, scientists 
 
 To better understand the brownian motion of suspended particles on a liquid Einstein derived a microscopic model of the diffusion motion based on the molecular-kinetic theory of heat on the miraculous year of 1905.\autocite{einstein1905motion} To determine the so-called self-diffusion coefficient, he followed the motion of a particle assumed independent from other particles and time steps large enough to consider mutually independent two consecutive motions.  By using the particle distribution of $N$ independent diffusing particle, he redefined the diffusion coefficient as a function of the mean squared displacement (MSD) of a particle. In a tridimensional space, we have the following Einstein relation:
 \begin{equation}\label{eq:einstein}
-  \langle {r(t)}^2 \rangle = 6Dt
+  \langle {r(t)}^2 \rangle = 6D\e{diff}t
 \end{equation}
 where $r(t)$ is the displacement of a particle from the time $0$ to $t$. The brackets represent the average over all independent trajectories (different particles and different time origins). This equation can be generalized to the diffusion of an adsorbate in the adsorbed phase, which describes how easy it is for a particle to move inside a nanoporous material. A low diffusion coefficient means a limited access to the pores of the structure as illustrated on Figure~\ref{fgr:intro_diffusion}.
 
@@ -108,7 +108,7 @@ This definition can be directly transposed to the case of a diffusion path inste
 \begin{equation}\label{eq:trans_rate_path}
   \mathcal{R}_{0\rightarrow 1} = \kappa\sqrt{\frac{k\e{B}T}{2\pi m}}\frac{e^{-\beta E(\mathbf{r}\ex{TS})/k\e{B}T}}{\int\e{path}e^{-\beta E(\mathbf{r})/k\e{B}T}\dd\mathbf{r}}
 \end{equation}
-where $\kappa$ is the Bennet-Chandler dynamic correction factor,\autocite{BENNETT1977} and  $\kappa=\tfrac{1}{2}$ if it is equiprobable to reach both sites from the transition state. This approach calls for the determination of the optimal diffusion path before carrying out the determination fo the diffusion rate. This is for instance the approach adopted by Wang et al. in their screening for noble gas separation, where they determined the minimal energy path before calculating diffusion rates.\autocite{Wang_2022}
+where $\kappa$ is the Bennet-Chandler dynamic correction factor,\autocite{BENNETT1977} and  $\kappa=\tfrac{1}{2}$ if it is equiprobable to reach both sites from the transition state. This approach calls for the determination of the optimal diffusion path before carrying out the determination fo the diffusion rate. This is for instance the approach adopted by Wang et al.\ in their screening for noble gas separation, where they determined the minimal energy path before calculating diffusion rates.\autocite{Wang_2022}
 
 Another approach is to determine a surface of transition through which the adsorbate would pass to diffuse along the channel of the material. This approach calls for the determination of the surface of transition only, but it relies on another definition of the transition rate $\mathcal{R}_{0\rightarrow 1}$:
 \begin{equation}\label{eq:trans_rate}
@@ -118,7 +118,7 @@ where the integration for the transition state is done on a bottle-neck surface 
 
 \subsubsection{Construction of the lattice}
 
-In this section, I will focus on the second approach that relies on the determination of a transition state as a surface. This approach has been developed by Mace et al. and relies on detecting the merging points of bassin representing the adsorption sites. The algorithm developed is called TuTraST, which stand for Tunnels and Transition States, is a search algorithm that aims at finding the tunnels and the transition states within them.\autocite{Mace_2019} Once the adsorption sites, the transition states and the tunnels that connect them are found, the equation ~\ref{eq:trans_rate} can be used to calculate the transition rates to move a particle from one point to another and hence producing a kinetic Monte Carlo simulation to determine the MSD and eventually the diffusion coefficients. 
+In this section, I will focus on the second approach that relies on the determination of a transition state as a surface. This approach has been developed by Mace et al.\ and relies on detecting the merging points of bassin representing the adsorption sites. The algorithm developed is called TuTraST, which stand for Tunnels and Transition States, is a search algorithm that aims at finding the tunnels and the transition states within them.\autocite{Mace_2019} Once the adsorption sites, the transition states and the tunnels that connect them are found, the equation~\ref{eq:trans_rate} can be used to calculate the transition rates to move a particle from one point to another and hence producing a kinetic Monte Carlo simulation to determine the MSD and eventually the diffusion coefficients. 
 
 
 \todo{Give the scheme here}
@@ -158,11 +158,11 @@ Then, there is a transition from the ballistic regime to the pseudo-diffusional 
 \caption{ Plots of the MSD at the last two time scales considered on the Figure~\ref{fgr:MSD_init}. On the left, the time-scale between \SI{0.01}{\ns} and \SI{0.4}{\ns} is considered, the MSD is fitted by a power function with the same exponent as one determined earlier, and a linear fit is given to show the incompatibility with the diffusion equation. On the right, we have the same approach but for the time-scale between \SI{0.4}{\ns} and \SI{9}{\ns}. }\label{fgr:MSD_linear_init}
 \end{figure}
 
-If we use the right plot of Figure~\ref{fgr:MSD_linear_init} to fit a linear relation and deduct the diffusion coefficient, we can have an underestimated value of the diffusion coefficient of $2.24\times 10^{-8}$~\si{\square\cm\per\square\s} --- it is an underestimation because the MSD is rather concave, which reduces the slope in the fitting process. This value is already a good estimation of the diffusion coefficient considering the rather high exponent $\alpha$ value in the with regard to $K_\alpha\tau^\alpha$.
+If we use the right plot of Figure~\ref{fgr:MSD_linear_init} to fit a linear relation and deduct the diffusion coefficient, we can have an underestimated value of the diffusion coefficient of $2.24\times 10^{-8}$~\si{\square\cm\per\s} --- it is an underestimation because the MSD is rather concave, which reduces the slope in the fitting process. This value is already a good estimation of the diffusion coefficient considering the rather high exponent $\alpha$ value in the with regard to $K_\alpha\tau^\alpha$.
 
-Since there is an element of randomness in the initial position of xenon (pockets have been blocked so that xenon is not blocked), we need to measure the effet of running different MD simulations of the value of the diffusion coefficients. To measure this uncertainty across different MD simulations with different initial positions determined by with different random seed. In RASPA, the random seed is simply equal to the UNIX time upon launching the MD simulation. This ensures that a different random seed is given to the $10$ different MD simulations we launched using the exact same parameters as mentioned previously. We found that the average diffusion coefficient value equals $2.13\times 10^{-8}$~\si{\square\cm\per\square\s} and the standard deviation equals $0.37\times 10^{-8}$~\si{\square\cm\per\square\s}, which represents about {17\%} of the average value. We could estimate the uncertainty to about {17\%} on the diffusion coefficient for a rather low coefficient around $10^{-8}$~\si{\square\cm\per\square\s}, we could expect lower uncertainty for less obstructing materials. 
+Since there is an element of randomness in the initial position of xenon (pockets have been blocked so that xenon is not blocked), we need to measure the effet of running different MD simulations of the value of the diffusion coefficients. To measure this uncertainty across different MD simulations with different initial positions determined by with different random seed. In RASPA, the random seed is simply equal to the UNIX time upon launching the MD simulation. This ensures that a different random seed is given to the $10$ different MD simulations we launched using the exact same parameters as mentioned previously. We found that the average diffusion coefficient value equals $2.13\times 10^{-8}$~\si{\square\cm\per\s} and the standard deviation equals $0.37\times 10^{-8}$~\si{\square\cm\per\s}, which represents about {17\%} of the average value. We could estimate the uncertainty to about {17\%} on the diffusion coefficient for a rather low coefficient around $10^{-8}$~\si{\square\cm\per\s}, we could expect lower uncertainty for less obstructing materials. 
 
-Now that we have more confidence on the method we are using, we will try to probe higher time-scales than the one accessible with an MD time step of \SI{1}{\fs}, because the diffusion regime seems to be occuring rather at the \SI{10}{\ns} time-scale. We ran a first calculation with 500 million step to confirm that we obtain a similar diffusion coefficient value. The time window between \SI{2}{\ns} and \SI{47}{\ns}, and the MSD are calculated from about 200 sampled trajectories, which gives rather correct values. We can obtain a more accurate diffusion coefficient of $2.6\times 10^{-8}$~\si{\square\cm\per\square\s}, which is very close to the one obtained in the previous approach. The value is slightly higher (which is expected) since the previous values was over-estimated. This approach is therefore consistent with the previous one.
+Now that we have more confidence on the method we are using, we will try to probe higher time-scales than the one accessible with an MD time step of \SI{1}{\fs}, because the diffusion regime seems to be occuring rather at the \SI{10}{\ns} time-scale. We ran a first calculation with 500 million step to confirm that we obtain a similar diffusion coefficient value. The time window between \SI{2}{\ns} and \SI{47}{\ns}, and the MSD are calculated from about 200 sampled trajectories, which gives rather correct values. We can obtain a more accurate diffusion coefficient of $2.6\times 10^{-8}$~\si{\square\cm\per\s}, which is very close to the one obtained in the previous approach. The value is slightly higher (which is expected) since the previous values was over-estimated. This approach is therefore consistent with the previous one.
 
 To further back-up the use of a higher time integration step, we need to understand the origin of the value of \SI{1}{\fs}. This value is usually justified by the Nyquist-Shannon sampling theorem that implies the integration step to be at most half of the period of the fastest vibration within the system. If we take a C--H vibration, the maximum time step value is \SI{5}{\fs}, and to be on the safe side, a time step of $1$--$2$~\si{\fs} is chosen in most of the diffusion studies in nanoporous materials.\autocite{Bukowski_2021} But in our system of a xenon diffusing in a rigid environment, we actually don't have any vibrational limitations as described earlier. I think that the use of higher time steps in this situation can be an easy way to access higher time-scales; however, furhter studies need to be performed to be sure of the validity of the quantities we derive from these MD simulations. The value of \SI{5}{\fs} is on the higher side of what we usually see in MD simulations, but it can be justified by the rigidity of the framework and the adsorbate we consider. Even higher time steps could be tested, but to be sure of the results we stay at this reasonable middle ground of \SI{5}{\fs} for all our high-throughput screening of the transport properties.
 
@@ -181,7 +181,7 @@ This approach only probes the linear relations between the MSD and time to deter
 
 In this section, I will present the different relations the diffusion coefficient may or may not have with the geometrical descriptors. I decided to use a forcefield-dependent definition of the radii so that it better correlates with the results of the MD simulation that uses the UFF forcefield. The different geometrical descriptors are then calculated using Zeo++ and these radii to calculate the PLD, the largest sphere diameter D$_{if}$ along a free path, the surface area and the pore volume, as already explained in the chapter 2. To further justify the use of the UFF-based radii, the original paper~\cite{Hung_2021} showed the better correlation of the PLD to the diffusion constant, and we can also see it from the Figure~\ref{fgr:diff_pld}. The PLD calculated by the standard CCDC defined atom radii does not fit the diffusion coefficient as well as the UFF-defined PLD. As shown in a smaller scale in the article~\cite{Haldoupis_2010} (see Figure~\ref{fgr:Haldoupis_2010} in the chapter 1), there is a linear relation between the diffusion activation energy (logarithmic transform of the diffusion coefficient) and the PLD, and this linear relation is much more noisy for the PLD defined by the standard CCDC radii than for the UFF-based PLD.
 
-Beyond the practical considerations on the geometrical descriptor calculations, the PLD explains the outlines of the variation of diffusion performance inside a nanoporous material. First there is a the linear relation previously highlighted, and then there is a sort of noisy plateau. In the first zone, the xenon is constrained by channels narrower than its kinetic radius. The wider the channel the higher the diffusion coefficient is, and this positive correlation persists until the channel is wider than about \SI{4.6}{\angstrom}. After this threshold, the diffusion coefficient is rather stable around $10^{-4}$~\si{\square\cm\per\square\s}, and the variations can only be explained by other phenomena such as the tortuosity inside nanopores or chemical nature of the surface of the nanopores. This value of diffusion coefficient is roughly the diffusion coefficient of a free xenon outside of the material. The material channels do not affect much the diffusion of the xenon inside the nanoporous materials represented on this plateau line.
+Beyond the practical considerations on the geometrical descriptor calculations, the PLD explains the outlines of the variation of diffusion performance inside a nanoporous material. First there is a the linear relation previously highlighted, and then there is a sort of noisy plateau. In the first zone, the xenon is constrained by channels narrower than its kinetic radius. The wider the channel the higher the diffusion coefficient is, and this positive correlation persists until the channel is wider than about \SI{4.6}{\angstrom}. After this threshold, the diffusion coefficient is rather stable around $3\times 10^{-4}$~\si{\square\cm\per\s}, and the variations can only be explained by other phenomena such as the tortuosity inside nanopores or chemical nature of the surface of the nanopores. This value of diffusion coefficient can be interpreted as the diffusion coefficient of a ``free'' xenon that is less affected by the surrounding pore surface. The channels are large enough so that the xenon is only a little slowed down, for values of the PLD over \SI{5}{\angstrom}. These results are compatible with experimental data that measured the diffusion coefficient of xenon dissolved in water at different temperature conditions, and found a value of $10^{-5}$~\si{\square\cm\per\s} at \SI{303}{\kelvin},\autocite{Wise1968} which is consistent with values centered around $3\times 10^{-4}$~\si{\square\cm\per\s} at the plateau.
 
 \begin{figure}[ht]
   \centering
@@ -200,7 +200,7 @@ If we now analyze the channel dimensions (determined using Zeo++) that could par
     \caption{ Distributions of the base-10 logarithm of the diffusion coefficients of three different subsets of the screened structures. The first one (a) is composed of structures with a unidimensional channels, the second (b) bidimensional channels and the third one (c) tridimensional channels. }\label{fgr:scatter_diffusion_chandim}
 \end{figure}
 
-For this reason, I plotted on Figure~\ref{fgr:hist_diffusion_chandim} the distribution of diffusion coefficients that depends on the dimensionality of the channels within the framework. The distribution for structures containing 1D structures is much more heavy tail in terms of low diffusion coefficients. We can more easily find 1D structures with very low diffusion coefficients under $3/times 10^{-8}$~\si{\square\cm\per\square\s}. The vast majority of structures with tridimensional channels has a rather higher diffusion coefficient between $3\times 10^{-6}$~\si{\square\cm\per\square\s} and $10^{-4}$~\si{\square\cm\per\square\s} with almost no structures with lower diffusion coefficients. This is not as blatant for bi- and unidimensional channels, we can more easily find structures between $3/times 10^{-8}$~\si{\square\cm\per\square\s} and $3\times 10^{-6}$~\si{\square\cm\per\square\s}, even if thery are not that frequent. The dimensionality of the channels can therefore influence the values of diffusion coefficient but the relation is not as clear as for PLD.
+For this reason, I plotted on Figure~\ref{fgr:hist_diffusion_chandim} the distribution of diffusion coefficients that depends on the dimensionality of the channels within the framework. The distribution for structures containing 1D structures is much more heavy tail in terms of low diffusion coefficients. We can more easily find 1D structures with very low diffusion coefficients under $3/times 10^{-8}$~\si{\square\cm\per\s}. The vast majority of structures with tridimensional channels has a rather higher diffusion coefficient between $3\times 10^{-6}$~\si{\square\cm\per\s} and $10^{-4}$~\si{\square\cm\per\s} with almost no structures with lower diffusion coefficients. This is not as blatant for bi- and unidimensional channels, we can more easily find structures between $3/times 10^{-8}$~\si{\square\cm\per\s} and $3\times 10^{-6}$~\si{\square\cm\per\s}, even if thery are not that frequent. The dimensionality of the channels can therefore influence the values of diffusion coefficient but the relation is not as clear as for PLD.
 
 \begin{figure}[ht]
   \centering
@@ -210,7 +210,7 @@ For this reason, I plotted on Figure~\ref{fgr:hist_diffusion_chandim} the distri
     \caption{ Distributions of diffusion coefficient of three different subsets of the screened structures. The first one (a) is composed of structures with a unidimensional channels, the second (b) bidimensional channels and the third one (c) tridimensional channels. }\label{fgr:hist_diffusion_chandim}
 \end{figure}
 
-Other geometrical properties of the material that can influence the diffusion is the void fraction and surface area. The low diffusion coefficients usually happen in materials with small pore volumes below $0.6$ as we can see on the Figure~\ref{fgr:diff_sa_vf}. However, it is diffuscult to draw a relationship between the voide fraction and the diffusion coefficient. The only relation is that materials with void fraction higher than $0.6$ have a diffsion coefficient over $3\times 10^{-6}$~\si{\square\cm\per\square\s}. This phenomenon is certainly du to the correlation between the PLd and the void fraction. Large PLD values are usually associated with large values of the void fraction. On the other hand, the accessible surface area for a probe of size $1.2$~\si{\angstrom} does not seem to influence the diffusion coefficient at all. 
+Other geometrical properties of the material that can influence the diffusion is the void fraction and surface area. The low diffusion coefficients usually happen in materials with small pore volumes below $0.6$ as we can see on the Figure~\ref{fgr:diff_sa_vf}. However, it is diffuscult to draw a relationship between the voide fraction and the diffusion coefficient. The only relation is that materials with void fraction higher than $0.6$ have a diffsion coefficient over $3\times 10^{-6}$~\si{\square\cm\per\s}. This phenomenon is certainly du to the correlation between the PLd and the void fraction. Large PLD values are usually associated with large values of the void fraction. On the other hand, the accessible surface area for a probe of size $1.2$~\si{\angstrom} does not seem to influence the diffusion coefficient at all. 
 
 \begin{figure}[ht]
   \centering
@@ -243,9 +243,9 @@ The last comparison is made with a thermodynamic quantity, the xenon adsorption 
 
 In this section, I will analyze the screening of the diffusion and selectivity properties calculated for xenon and krypton to identify interesting materials that presents both a good Xe/Kr selectivity and a good Xe/Kr diffusion coefficient ratio. To do so we also performed a diffusion coefficient screening for krypton, and we end up with 4,816 structures that has good determination coefficient for both linear fits of xenon and krypton MSD. These structures are then tested to find materials with a good balance between thermodynamic and kinetic properties for the xenon/krypton separation.
 
-\subsubsection{Diffusion selectivity and permselectivity}
+\subsubsection{Screening trade-off between }\label{sct:diff_screen}
 
-I will start by comparing the xenon/krypton selectivity at infinite dilution with the xenon and krypton diffusion coefficients. First, we can say that a highly selective materials can have a decent diffusion coefficient, the diffusion limitation observed on the KAXQIL structure is therefore not inevitable, which is a good news. On the left plot of the Figure~\ref{fgr:diff_s0_lcd}, we can clearly see that all configurations are possible: high selectivity (over $40$) with high diffusion coefficient (over $10^{-6}$~\si{\square\cm\per\square\s}) and high selectivity with low diffusivity. The krypton coefficients seem to be rather stable between $10^{-6}$~\si{\square\cm\per\square\s} and $10^{-3}$~\si{\square\cm\per\square\s}. It means that it is not the main leverage to increase the diffusion selectivity since very low values of kryton diffusion coefficients do not appear for highly selective materials. To improve the tunnel vision we had on the thermodynamic selectivity, we will study a transport related selectivity metric to find highly selective materials that do not show significant transport limitations.
+I will start by comparing the xenon/krypton selectivity at infinite dilution with the xenon and krypton diffusion coefficients. First, we can say that a highly selective materials can have a decent diffusion coefficient, the diffusion limitation observed on the KAXQIL structure is therefore not inevitable, which is a good news. On the left plot of the Figure~\ref{fgr:diff_s0_lcd}, we can clearly see that all configurations are possible: high selectivity (over $40$) with high diffusion coefficient (over $10^{-6}$~\si{\square\cm\per\s}) and high selectivity with low diffusivity. The krypton coefficients seem to be rather stable between $10^{-6}$~\si{\square\cm\per\s} and $10^{-3}$~\si{\square\cm\per\s}. It means that it is not the main leverage to increase the diffusion selectivity since very low values of kryton diffusion coefficients do not appear for highly selective materials. To improve the tunnel vision we had on the thermodynamic selectivity, we will study a transport related selectivity metric to find highly selective materials that do not show significant transport limitations.
 
 \begin{figure}[ht]
   \centering
@@ -259,7 +259,7 @@ To take account of the transport properties in a separation process, we generall
   s\ex{Xe/Kr}\e{diff} = \frac{D\ex{Xe}}{D\ex{Kr}}
 \end{equation}
 If we want to look at both the transport and thermodynamic effects, we can combine the thermodynamic adsorption selectivity defined in chapter 2 (equations~\ref{eq:selec_0} and~\ref{eq:selec_0}) and the diffusion selectivity to define the membrane selectivity (used to characterize membranes). This membrane selectivity can also be called a perm-selectivity because it corresponds to the ratio of the permeabilities of the components of the binary mixture we want to separate. The xenon/krypton permselectivity $s\ex{Xe/Kr}\e{perm}$ can therefore be defined as follows:
-\begin{equation}
+\begin{equation}\label{eq:membrane_selec}
   s\ex{Xe/Kr}\e{perm} = s\ex{Xe/Kr}\e{diff} \times s\ex{Xe/Kr}\e{ads}
 \end{equation}
 where $s\ex{Xe/Kr}\e{ads}$ corresponds to the adsorption selectivity used throughout the previous chapters (at infinite dilution or higher pressure). 
@@ -286,32 +286,39 @@ If we look into the details of these structures, we can see that they combine la
 
 We can see that at higher pressure, some materials experience a shift toward lower selectivity values. And, only 2 structures have an ambient-pressure selectivity over $40$: the MOFs with the following CSD code XUNSOQ\autocite{Abrahams_2014} and GUMDEZ\autocite{Yin_2014}  (see Table~\ref{table:diff}). Most of these materials actually have a high value of cavity size, only structures with LCD near \SI{6}{\angstrom} are left in this area of the plot. We can also note that the dimension of the channel is equal to one too, which starts to brush a picture of the interesting materials. These materials are constituted of unidimensional channels with a small pore sizes so that the selectivity is conserved even at higher pressure conditions. If we broaden the scope to the structures with a selectivity higher than $30$ instead of $40$, we now have 38 structures that also have similar features with rather low pore sizes and low channel dimensionality. Some of these structures have more or less kept their selectivity such as QOZDOY\autocite{Zhang_2001} and wasn't detected on the pre-screening on the low-pressure selectivity (Figure~\ref{fgr:perm_selec0}), but other structures, such as the MOF MISQIQ\autocite{Tong_2013}, actually dropped significantly in selectivity values from infinite dilution to ambient pressure (see Table~\ref{table:diff}). 
 
-When considering the ambient-pressure selectivity, the large majority of highly selective materials actually have a rather low diffusion selectivity (lower than $0.1$), as we can see on the Figure~\ref{fgr:perm_selec2080} (this was not the case for the low-pressure selectivity). This result actually suggest that we actually need to make a trade-off between adsoprtion selectivity and diffusion selectivity. In our approach, we decided to lower the adsorption diffusivity to values around $40$ to allow for higher diffusion selectivity values, because the approach up until now only mazimized the adsorption selectivity and the values on the lower right side of the plots of Figure~\ref{fgr:perm_selec2080} are actually already obtained and studied in standard screenings in the literature\autocite{Simon_2015,Chung_2019} but also in one of my published work~\ref{Ren_2021}. Also, we did not try to optimize the perm-selectivity also known as the membrane selectivity because it is specifically useful for membrane separations and many studies in the literature focus on this aspect of the screening\autocite{Anderson_2017,Wang_2022}. From the screening we presented here, we rather want to find thermodynamically selective materials that are not limited by diffusion and identified some interesting materials that will be further studied in the following subsection. 
+When considering the ambient-pressure selectivity, the large majority of highly selective materials actually have a rather low diffusion selectivity (lower than $0.1$), as we can see on the Figure~\ref{fgr:perm_selec2080} (this was not the case for the low-pressure selectivity). This result suggest that a trade-off between adsorption selectivity and diffusion selectivity is actually needed. In my screening approach, I decided to lower the adsorption diffusivity to values around $40$ to allow for higher diffusion selectivity values, because up until now standard screenings in the literature\autocite{Simon_2015,Chung_2019} and in my published work~\ref{Ren_2021} only mazimized the adsorption selectivity --- this equivalent to working on the lower right side of the plots of Figure~\ref{fgr:perm_selec2080}. To improve the former approach, we included a kinetic constraint in our screening. Another approach would be to optimize the perm-selectivity also known as the membrane selectivity (equation~\ref{eq:membrane_selec}), but it would be the solution to another application, the membrane separation, which is broadly studied in the literature\autocite{Anderson_2017,Wang_2022}. From the screening we presented here, we would rather like to find thermodynamically selective materials that are not limited by diffusion, and some interesting identified materials will be further studied in the following subsection. 
 
 
 \subsubsection{Identification of interesting materials}
 
-\todo{Visualization of the energy map inside}
+By crossing the transport data with the thermodynamic one, we 
 
-% En analysant les rapports des coefficients de diffusion en comparaison des sélectivités, on a pu identifier deux structures qui couplent une bonne sélectivité à un ratio de diffusivités autour de 0,5 (\emph{cf.} table~\ref{table:diff}) : les structures de code CCSD GUMDEZ et QOZDOY. Grâce à leur LCD proches du diamètre cinétique du xénon et à un PLD assez élevé pour ne pas entraver le déplacement du xénon à travers les canaux. Les coefficients de diffusion du xénon tournent autour de 7$\times$10\ex{-5} \si{\square\centi\meter\per\second} ce qui est proche de la diffusion libre (de l'ordre de 10\ex{-5} \si{\square\centi\meter\per\second}), ce qui confirme l'absence de blocage cinétique. 
 
-% Une autre structure, ADOGEH (\emph{cf.} table~\ref{table:diff}), présente une diffusion 14 fois plus rapide pour le xénon que le krypton, tout en ayant une sélectivité à basse pression de 49. Ce phénomène s'explique par le fait que la structure a des canaux dans les trois directions et que pour changer de direction il faut passer par un canal plus étroit non accessible par le xénon. Ainsi le xénon, n'ayant qu'une direction de diffusion à l'intérieur du matériau, va bien plus vite que le krypton pour lequel toutes les directions s'offrent à lui. Ainsi, le krypton est plus lent à diffuser car il change de direction constamment dans le matériau contrairement au xénon. En revanche, la sélectivité baisse à 10 lorsque l'on considère un mélange de 20/80 Xe/Kr à pression ambiante au lieu de la dilution infinie. Ce matériau pourrait être utile notamment à pression partielle faible en xénon et krypton, ce qui est le cas pour notre application. Des études plus approfondies sont encore à mener, notamment en confirmant les valeurs de sélectivité par des calculs DFT plus fiable ou en étudiant la flexibilité ; mais si les résultats sont concluant ces matériaux pourraient alors être testés expérimentalement pour une éventuelle application industrielle.
+% En analysant les rapports des coefficients de diffusion en comparaison des sélectivités, on a pu identifier deux structures qui couplent une bonne sélectivité à un ratio de diffusivités autour de 0,5 (\emph{cf.} table~\ref{table:diff}) : les structures de code CCSD GUMDEZ et QOZDOY. Grâce à leur LCD proches du diamètre cinétique du xénon et à un PLD assez élevé pour ne pas entraver le déplacement du xénon à travers les canaux. Les coefficients de diffusion du xénon tournent autour de 7$\times$10\ex{-5} \si{\square\centi\meter\per\second} ce qui est proche de la diffusion libre (de l'ordre de 10\ex{-4} \si{\square\centi\meter\per\second}), ce qui confirme l'absence de blocage cinétique. 
+
 
 \begin{table}[ht]
+\setlength\extrarowheight{5pt}
 \centering
-\begin{tabular}{|l|r|r|r|r|r|r|}
+\begin{tabular}{|l|c|c|c|c|c|c|}
 \hline
-  CCSD ref.\ code &      $D_{if}\ex{UFF}$ (\si{\angstrom}) &    s$_1$ &       s$_0$ &     PLD\ex{UFF} (\si{\angstrom}) &    Xe/Kr diffusion selectivity &  Xe diff. coeff. \\
+  Structure &       &    &  Pore size &  Channel size   &     & Diffusion Coeff. \\
+  CSD ref.\ code &  $s_0\ex{Xe/Kr}$  &  $s_1\ex{Xe/Kr}$   &    D$_{if}\ex{UFF}$ (\si{\angstrom})   &   PLD\ex{UFF} (\si{\angstrom})  &  $s\e{diff}\ex{Xe/Kr}$ &  $D\e{diff}\ex{Xe}$ (\si{\square\centi\meter\per\second}) \\
 \hline
-ADOGEH\autocite{Peikert_2012} & 12.9 &  10 & 49 & 5.3 & 15.5 &               5$\times$10\ex{-5} \si{\square\centi\meter\per\second} \\
-XUNSOQ\autocite{Abrahams_2014} &  5.6 & 48 & 38 & 4.8 &  0.23 &  7$\times$10\ex{-6}~\si{\square\centi\meter\per\second} \\
-GUMDEZ\autocite{Yin_2014} &  5.5 & 42 & 56 & 5.1 &  0.55 &               7$\times$10\ex{-5} \si{\square\centi\meter\per\second} \\
-QOZDOY\autocite{Zhang_2001} &  5.6 & 37 & 52 & 5.0 &  0.45 &               7$\times$10\ex{-5} \si{\square\centi\meter\per\second} \\
-MISQIQ\autocite{Tong_2013} &  4.6 & 37 & 140 & 4.5 &  1.4 &               2$\times$10\ex{-4} \si{\square\centi\meter\per\second} \\
+ADOGEH\autocite{Peikert_2012} & 49  &  10 & 12.9 & 5.3 & 15.5 &  5$\times$10\ex{-5}  \\
+XUNSOQ\autocite{Abrahams_2014} & 38  & 48 &  5.6 & 4.8 &  0.23 &  7$\times$10\ex{-6} \\
+GUMDEZ\autocite{Yin_2014} & 56 & 42 &  5.5 & 5.1 &  0.55 &  7$\times$10\ex{-5} \\
+QOZDOY\autocite{Zhang_2001} & 52  & 37 &  5.6 & 5.0 &  0.45 &  7$\times$10\ex{-5} \\
+MISQIQ\autocite{Tong_2013} & 140 & 37 &  4.6 & 4.5 &  1.4 &  2$\times$10\ex{-4} \\
 \hline
 \end{tabular}
-\caption{Transport and thermodynamic performances of some top performing structures of CoRE MOF 2019. }\label{table:diff}
+\caption{Transport and thermodynamic performances of top performing structures of CoRE MOF 2019 screened out by the approach developed in section~\ref{sct:diff_screen}. The thermodynamic properties are determined using $s_0\ex{Xe/Kr}$ and $s_1\ex{Xe/Kr}$ that correspond to the xenon/krypton adsorption selectivity values respectively at infinite dilution and ambient pressure condition. The pore size is defined as the largest cavity along a free diffusion path D$_{if}\ex{UFF}$ and the channel size is defined using the pore limiting diameter PLD\ex{UFF} using atom radii defined by the UFF. The transport properties are evaluated using the xenon/krypton diffusion selectivity $s\e{diff}\ex{Xe/Kr}$ and the xenon diffusion coefficient $D\e{diff}\ex{Xe}$ calculated by the MD-based screening presented above. }\label{table:diff}
 \end{table}
+
+
+% Une autre structure, ADOGEH (\emph{cf.} table~\ref{table:diff}), présente une diffusion 14 fois plus rapide pour le xénon que le krypton, tout en ayant une sélectivité à basse pression de 49. Ce phénomène s'explique par le fait que la structure a des canaux dans les trois directions et que pour changer de direction il faut passer par un canal plus étroit non accessible par le xénon. Ainsi le xénon, n'ayant qu'une direction de diffusion à l'intérieur du matériau, va bien plus vite que le krypton pour lequel toutes les directions s'offrent à lui. Ainsi, le krypton est plus lent à diffuser car il change de direction constamment dans le matériau contrairement au xénon. En revanche, la sélectivité baisse à 10 lorsque l'on considère un mélange de 20/80 Xe/Kr à pression ambiante au lieu de la dilution infinie. Ce matériau pourrait être utile notamment à pression partielle faible en xénon et krypton, ce qui est le cas pour notre application. Des études plus approfondies sont encore à mener, notamment en confirmant les valeurs de sélectivité par des calculs DFT plus fiable ou en étudiant la flexibilité ; mais si les résultats sont concluant ces matériaux pourraient alors être testés expérimentalement pour une éventuelle application industrielle.
+\todo{Visualization of the energy map inside}
+
 
 % Les résultats d'un screening couplant thermodynamique et cinétique permettent déjà de mettre en valeur des matériaux encore inconnus de la communauté. La question du blocage cinétique est certes traitée dans certaines études,\autocite{Stanton_2022} mais aucune approche systématique n'a encore été développée. Ces structures ont des sélectivités élevées mais ne sont pas les plus sélectives; elles auraient donc été écartées dans un screening standard basé uniquement sur la thermodynamique. 
 
