--- a/thesis.bib
+++ b/thesis.bib
@@ -3633,3 +3633,16 @@ URL = {https://doi.org/10.1137/0216006},
 	title = {A chiral open-framework fluoroaluminophosphate with enantiomeric excess in the bulk product},
 	journal = {Chem. Commun.}
 }
+@article{Wise1968,
+  doi = {10.1016/0009-2509(68)89029-3},
+  url = {https://doi.org/10.1016/0009-2509(68)89029-3},
+  year = {1968},
+  month = oct,
+  publisher = {Elsevier {BV}},
+  volume = {23},
+  number = {10},
+  pages = {1211--1216},
+  author = {D.L. Wise and G. Houghton},
+  title = {Diffusion coefficients of neon,  krypton,  xenon,  carbon monoxide and nitric oxide in water at 10{\textendash}60{\textdegree}C},
+  journal = {Chemical Engineering Science}
+}
